# Forensic-Tool

./: .gitignore  ConsoleHost_history.txt  LINUX_SERVER_SETUP_GUIDE.md  README.md  axiom_acquisition_checklist.html  docker_install.md  invoke_kape_acquire.ps1  simple_kape_acquire.ps1
browser_forensics/: Cargo.toml  checklist.md  cmd.txt  report.html  report1.html
browser_forensics/src/: cache_parser.rs  chromium_parser.rs  extension_extractor.rs  firefox_parser.rs  html.rs  main.rs  models.rs  privacy_detector.rs  report.rs  scanner.rs  session_parser.rs  timeline.rs  wal_parser.rs
data_theft/: .gitignore  Cargo.toml  report.html  research.md
data_theft/src/: main.rs
data_theft/src/analyzer/: correlator.rs  html_report.rs  mod.rs  report.rs  timeline.rs
data_theft/src/models/: eventlog.rs  jumplist.rs  lnk.rs  mft.rs  mod.rs  prefetch.rs  registry.rs  setupapi.rs  shellbags.rs  timeline.rs  usnjrnl.rs
data_theft/src/parsers/: eventlog.rs  jumplist.rs  lnk.rs  mft.rs  mod.rs  prefetch.rs  registry.rs  setupapi.rs  shellbags.rs  usnjrnl.rs
memory_corelation/: .gitignore  Cargo.toml  New_Correlation.md  README.md  generate_vol3_jsonl.sh  implementation_plan.md  ldrmodules_correlation.md  vol3_correlate_context_export.md
memory_corelation/config/: README.md
memory_corelation/docs/: ARCHITECTURE_AND_CORRELATION_GUIDE.md  DETECTION_RULES.md
memory_corelation/jsonl/: ads.jsonl  callbacks.jsonl  certificates.jsonl  cmdline.jsonl  cmdscan.jsonl  consoles.jsonl  dlllist.jsonl  driverirp.jsonl  driverscan.jsonl  filescan.jsonl  getsids.jsonl  hivelist.jsonl  hivescan.jsonl  info.jsonl  ldrmodules.jsonl  malfind.jsonl  modscan.jsonl  netscan.jsonl  netstat.jsonl  printkey.jsonl  privileges.jsonl  psscan.jsonl  pstree.jsonl  residentdata.jsonl  scheduled_tasks.jsonl  ssdt.jsonl  svcscan.jsonl  thrdscan.jsonl  userassist.jsonl
memory_corelation/reports/: report.html
memory_corelation/src/: config.rs  error.rs  lib.rs  main.rs  scoring.rs  threat_intel.rs
memory_corelation/src/correlation/: artifact_graph.rs  forensic_extractor.rs  ioc_extractor.rs  kill_chain.rs  linkers.rs  mod.rs  timeline.rs
memory_corelation/src/detection/: mod.rs
memory_corelation/src/models/: browser.rs  certificates.rs  files.rs  forensic_metadata.rs  malware.rs  mft.rs  mod.rs  network.rs  process.rs  registry.rs  security.rs  services.rs  threads.rs
memory_corelation/src/parsers/: json_parser.rs  jsonl_parser.rs  mod.rs  plugin_detection.rs
memory_corelation/src/pipeline/: context.rs  mod.rs
network_forensics/: Artefacts.md  Cargo.toml  DOCUMENTATION.md  Network Tool.md  cmd.txt  collect_live_network_artifacts.ps1  network.md
network_forensics/artefacts/live_20260315_103100/: arp_a.txt  established_connections.txt  external_established_connections.txt  firewall_profiles.txt  ipconfig_all.txt  ipconfig_displaydns.txt  listening_ports.txt  named_pipes.txt  nbtstat_cache.txt  net_session.txt  net_use.txt  netstat_ano.txt  netstat_anob.txt  route_print.txt  winhttp_proxy.txt
network_forensics/src/: main.rs  rules.rs
network_forensics/src/analysis/: beaconing.rs  correlation.rs  exfiltration.rs  infrastructure.rs  lateral_movement.rs  mod.rs  persistence.rs  process_network.rs  scorer.rs  timeline.rs
network_forensics/src/ingest/: browser.rs  evtx.rs  filesystem.rs  ioc.rs  live_json.rs  lnk.rs  mod.rs  prefetch.rs  registry.rs  srum.rs
network_forensics/src/models/: mod.rs  net_event.rs
ntfs_analyzer/: COMMANDS.md  Cargo.toml  DETECTION_ANALYSIS_CORRELATION.md  NTFS_Forensics_Analysis_Research.md  RecycleBin_Forensics.md  research.md
ntfs_analyzer/rules/: default_rules.toml  whitelist.toml
ntfs_analyzer/src/: correlation.rs  main.rs  models.rs  parser.rs  report.rs  rules.rs  timeline.rs
portal/rust-backend/: Cargo.toml  portal.db-shm  portal.db-wal
portal/rust-backend/src/: ioc.rs  main.rs  template_utils.rs
prefetch_analyzer/: Cargo.toml  FEATURES.md  correlation.md  prefetch_analyzer_documentation.md  report.html  report_d3.html  rules.yaml
prefetch_analyzer/src/: analyzer.rs  main.rs  models.rs  parser.rs  reporter.rs  rules.rs
prefetch_viewer/: Cargo.toml  research.md  timeline.md
prefetch_viewer/src/: error.rs  main.rs  state.rs
prefetch_viewer/src/detection/: mod.rs  rules.rs  types.rs
prefetch_viewer/src/parser/: hash.rs  mod.rs  types.rs
prefetch_viewer/src/routes/: files.rs  mod.rs  report.rs  timeline.rs  upload.rs
prefetch_viewer/static/: app.js  index.html  style.css
registry_analyzer/: .gitignore  Cargo.toml  README.md  Windows_Registry_Forensics_Research.md  registry_report.html  repiort.html
registry_analyzer/src/: analyzer.rs  main.rs  models.rs  report.rs
registry_parser/: .gitignore  Cargo.toml  README.md
registry_parser/src/: main.rs
registry_viewer/: Cargo.toml  Details.md  report_path.txt
registry_viewer/.github/agents/: Planner-Advanced.agent.md
registry_viewer/src/: main.rs  registry.rs  state.rs
registry_viewer/src/routes/: hives.rs  keys.rs  mod.rs  pages.rs  report.rs  search.rs  values.rs
registry_viewer/static/: app.js  style.css
registry_viewer/templates/: detail_panel.html  hive_list.html  index.html  search_results.html  tree_children.html
rust_forensics_collector/: Cargo.toml  usage_guide.md
rust_forensics_collector/src/: collection.rs  main.rs  smb.rs  tools.rs  utils.rs
shim-amcache_analyzer/: .gitignore  Cargo.toml  ShimCache_AmCache_Forensic_Research.md  repot.html  rules.yaml
shim-amcache_analyzer/src/: analysis.rs  main.rs  output.rs  parsers.rs  rules.rs
srum_analysis/: Cargo.toml
srum_analysis/reports/: srum_analysis_report.html
srum_analysis/src/: lib.rs  main.rs
srum_analysis/src/analyzers/: anomaly_detector.rs  app_analyzer.rs  connection_analyzer.rs  mod.rs  network_analyzer.rs  timeline_builder.rs
srum_analysis/src/correlators/: cross_table.rs  mod.rs
srum_analysis/src/models/: app_resource.rs  app_timeline.rs  common.rs  energy_usage.rs  mod.rs  network_conn.rs  network_usage.rs  push_notification.rs  vfu_provider.rs
srum_analysis/src/parsers/: csv_parser.rs
(+867 files in other folders)
