[package]
name = "vol3-correlate"
version = "0.1.0"
edition = "2021"
description = "Correlate and analyze Volatility3 memory forensics outputs"
authors = ["Memory Forensics Team"]
license = "MIT"
repository = "https://github.com/kali/vol3-correlate"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DataFrame operations for correlation
polars = { version = "0.46", default-features = false, features = [
    "json", 
    "lazy",
    "dtype-datetime",
    "dtype-struct",
    "strings",
    "temporal",
] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal colors
colored = "2.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1.10"

# HTML templating for reports
tera = "1.19"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Base64 decoding for cmdline analysis
base64 = "0.22"

# Directory walking
walkdir = "2.5"

# HTTP client for threat intelligence APIs
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
