[package]
name = "ntfs_analyzer"
version = "0.1.0"
edition = "2021"
description = "NTFS Forensic Analysis and Correlation Tool"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
colored = "2"
tabled = "0.16"
indicatif = "0.17"
anyhow = "1"
thiserror = "2"
toml = "0.8"
regex = "1"
csv = "1"
