[package]
name = "prefetch_analyzer"
version = "1.0.0"
edition = "2021"
authors = ["kaliHeker"]
description = "Advanced Windows Prefetch Analyzer - Forensic tool for analyzing PECmd JSON output"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Terminal UI
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }

# Parallel processing
rayon = "1.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for pattern matching
regex = "1.10"

# HTML templating
tera = "1.19"

# Configuration
serde_yaml = "0.9"

[profile.release]
lto = true
opt-level = 3
strip = true
