[package]
name = "prefetch_viewer"
version = "1.0.0"
edition = "2021"
description = "Interactive web-based Windows Prefetch file viewer with suspicious indicator detection"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
mime_guess = "2"
open = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
