[package]
name = "rust_forensics_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
sha2 = "0.10"
md5 = { package = "md-5", version = "0.10" }
hex = "0.4"
is_elevated = "0.1"
whoami = "1.4"
walkdir = "2.5.0"

