[package]
name = "shim-amcache-analyzer"
version = "1.0.0"
edition = "2021"
authors = ["Forensic Analysis Tool"]
description = "High-performance ShimCache and AmCache correlation analyzer for Windows forensics"
license = "MIT"
readme = "README.md"
keywords = ["forensics", "windows", "shimcache", "amcache", "dfir"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rayon = "1.8"
indexmap = { version = "2.1", features = ["serde"] }
csv = "1.3"
colored = "2.1"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
dashmap = "5.5"
memmap2 = "0.9"

[features]
default = []
virustotal = ["reqwest"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[[bin]]
name = "shim-amcache-analyzer"
path = "src/main.rs"
