[package]
name = "srum_analysis"
version = "0.1.0"
edition = "2021"
description = "Forensic analysis tool for SRUM (System Resource Usage Monitor) artifacts parsed by SrumECmd"
authors = ["kaliHeker"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
regex = "1"
