[package]
name = "portal-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["form", "multipart", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Templates
tera = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Auth / crypto
jsonwebtoken = "9"
bcrypt = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
time = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
regex = "1"
include_dir = "0.7"
portable-pty = "0.8"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
